fixed layout problems

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ body {
     padding-left: 37.5%;
     text-align: left;
     width: 25%;
-    margin-top: -54px;
+    margin-top: -47px;
 }
 
 
@@ -126,7 +126,7 @@ body {
 .progress-left {
     text-align: left;
     width: 25%;
-    margin-top: -54px;
+    margin-top: -47px;
 }
 
 .progress-left-h4 {
